[gd_scene load_steps=11 format=4 uid="uid://ky8uxivi0xxa"]

[ext_resource type="Script" uid="uid://cavndqk0eed30" path="res://test/空洞骑士测试/scenes/main_scene.gd" id="1_uca7k"]
[ext_resource type="TileSet" uid="uid://j451nc4y48nm" path="res://test/空洞骑士测试/assets/MainScene.tres" id="2_r4p3r"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_5t8nr"]
[ext_resource type="PackedScene" uid="uid://uy0e1rgag31n" path="res://test/空洞骑士测试/entity/player/player.tscn" id="5_twqex"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="6_0dh02"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_ls40i"]

[sub_resource type="Resource" id="Resource_jf5q1"]
script = ExtResource("7_ls40i")

[sub_resource type="Resource" id="Resource_f67no"]
script = ExtResource("7_ls40i")

[sub_resource type="Curve2D" id="Curve2D_q3lyl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -72, 0, 0, 0, 0, -96, -72)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jf5q1"]
size = Vector2(19.200003, 8)

[node name="MainScene" type="Node"]
script = ExtResource("1_uca7k")
metadata/_edit_vertical_guides_ = [-64.0]
metadata/_edit_horizontal_guides_ = [-72.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4/wMAAAABAAEAAAD4/wIAAAABAAEAAAD4/wEAAAABAAEAAAD4/wAAAAABAAAAAAD5/wAAAAABAAAAAAD5/wEAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD7/wIAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD9/wMAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAACAAEAAAABAAEAAAACAAAAAAABAAAAAAABAAMAAAABAAEAAAABAAIAAAABAAEAAAABAAEAAAABAAEAAAABAAAAAAABAAAAAAAAAAMAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAAAAAAAAAABAAAAAAD//wMAAAABAAEAAAD//wIAAAABAAEAAAD//wEAAAABAAEAAAD//wAAAAABAAAAAAD+/wMAAAABAAEAAAD+/wIAAAABAAEAAAD+/wEAAAABAAEAAAD+/wAAAAABAAAAAAD9/wIAAAABAAEAAAD9/wEAAAABAAEAAAD9/wAAAAABAAAAAAD8/wEAAAABAAEAAAD8/wAAAAABAAAAAAD7/wMAAAABAAEAAAD7/wEAAAABAAEAAAD7/wAAAAABAAAAAAD6/wMAAAABAAEAAAD6/wAAAAABAAAAAAD5/wMAAAABAAEAAAD5/wIAAAABAAEAAAD3/wMAAAABAAEAAAD3/wIAAAABAAEAAAD3/wEAAAABAAEAAAD3/wAAAAABAAAAAAD2/wMAAAABAAEAAAD2/wIAAAABAAEAAAD2/wEAAAABAAEAAAD2/wAAAAABAAAAAAD1/wMAAAABAAEAAAD1/wIAAAABAAEAAAD1/wEAAAABAAEAAAD1/wAAAAABAAAAAAD0/wMAAAABAAEAAAD0/wIAAAABAAEAAAD0/wEAAAABAAEAAAD0/wAAAAABAAAAAADz/wMAAAABAAEAAADz/wIAAAABAAEAAADz/wEAAAABAAEAAADz/wAAAAABAAAAAADy/wMAAAABAAEAAADy/wIAAAABAAEAAADy/wEAAAABAAEAAADy/wAAAAABAAAAAADx/wMAAAABAAEAAADx/wIAAAABAAEAAADx/wEAAAABAAEAAADx/wAAAAABAAAAAADw/wMAAAABAAEAAADw/wIAAAABAAEAAADw/wEAAAABAAEAAADw/wAAAAABAAAAAADv/wMAAAABAAEAAADv/wIAAAABAAEAAADv/wEAAAABAAEAAADv/wAAAAABAAAAAAAGAAMAAAABAAEAAAAGAAIAAAABAAEAAAAGAAEAAAABAAEAAAAGAAAAAAABAAEAAAAFAAMAAAABAAEAAAAFAAIAAAABAAEAAAAFAAEAAAABAAEAAAAFAAAAAAABAAEAAAAEAAMAAAABAAEAAAAEAAIAAAABAAEAAAAEAAEAAAABAAEAAAAEAAAAAAAFAAIAAAADAAMAAAABAAEAAAADAAIAAAABAAEAAAADAAEAAAABAAEAAAADAAAAAAABAAAAAADu/wAAAAABAAAAAADt/wAAAAABAAAAAADs/wAAAAABAAAAAADr/wAAAAABAAAAAADq/wAAAAABAAAAAADp/wAAAAABAAAAAADo/wAAAAABAAAAAADn/wAAAAABAAAAAADm/wAAAAABAAAAAADl/wAAAAABAAAAAADk/wAAAAABAAAAAADj/wAAAAABAAAAAADi/wAAAAABAAAAAADh/wAAAAABAAAAAADg/wAAAAABAAAAAADf/wAAAAABAAAAAADe/wAAAAABAAAAAADd/wAAAAABAAAAAADc/wAAAAAEAAIAAADb/wAAAAABAAEAAADa/wAAAAABAAEAAADZ/wAAAAABAAEAAADu/wMAAAABAAEAAADu/wIAAAABAAEAAADu/wEAAAABAAEAAADt/wMAAAABAAEAAADt/wIAAAABAAEAAADt/wEAAAABAAEAAADs/wMAAAABAAEAAADs/wIAAAABAAEAAADs/wEAAAABAAEAAADr/wMAAAABAAEAAADr/wIAAAABAAEAAADr/wEAAAABAAEAAADq/wMAAAABAAEAAADq/wIAAAABAAEAAADq/wEAAAABAAEAAADp/wMAAAABAAEAAADp/wIAAAABAAEAAADp/wEAAAABAAEAAADo/wMAAAABAAEAAADo/wIAAAABAAEAAADo/wEAAAABAAEAAADn/wMAAAABAAEAAADn/wIAAAABAAEAAADn/wEAAAABAAEAAADm/wMAAAABAAEAAADm/wIAAAABAAEAAADm/wEAAAABAAEAAADl/wMAAAABAAEAAADl/wIAAAABAAEAAADl/wEAAAABAAEAAADk/wMAAAABAAEAAADk/wIAAAABAAEAAADk/wEAAAABAAEAAADj/wMAAAABAAEAAADj/wIAAAABAAEAAADj/wEAAAABAAEAAADi/wMAAAABAAEAAADi/wIAAAABAAEAAADi/wEAAAABAAEAAADh/wMAAAABAAEAAADh/wIAAAABAAEAAADh/wEAAAABAAEAAADg/wMAAAABAAEAAADg/wIAAAABAAEAAADg/wEAAAABAAEAAADf/wMAAAABAAEAAADf/wIAAAABAAEAAADf/wEAAAABAAEAAADe/wMAAAABAAEAAADe/wIAAAABAAEAAADe/wEAAAABAAEAAADd/wMAAAABAAEAAADd/wIAAAABAAEAAADd/wEAAAABAAEAAADc/wMAAAABAAEAAADc/wIAAAABAAEAAADc/wEAAAABAAEAAADb/wMAAAABAAEAAADb/wIAAAABAAEAAADb/wEAAAABAAEAAADa/wMAAAABAAEAAADa/wIAAAABAAEAAADa/wEAAAABAAEAAADZ/wMAAAABAAEAAADZ/wIAAAABAAEAAADZ/wEAAAABAAEAAADY/wMAAAAAAAEAAADY/wIAAAAAAAEAAADY/wEAAAAAAAEAAADY/wAAAAAAAAEAAAAGAAQAAAABAAIAAAAFAAQAAAABAAIAAAAEAAQAAAABAAIAAAADAAQAAAABAAIAAAACAAQAAAABAAIAAAABAAQAAAABAAIAAAAAAAQAAAABAAIAAAD//wQAAAABAAIAAAD+/wQAAAABAAIAAAD9/wQAAAABAAIAAAD8/wQAAAABAAIAAAD7/wQAAAABAAIAAAD6/wQAAAABAAIAAAD5/wQAAAABAAIAAAD4/wQAAAABAAIAAAD3/wQAAAABAAIAAAD2/wQAAAABAAIAAAD1/wQAAAABAAIAAAD0/wQAAAABAAIAAADz/wQAAAABAAIAAADy/wQAAAABAAIAAADx/wQAAAABAAIAAADw/wQAAAABAAIAAADv/wQAAAABAAIAAADu/wQAAAABAAIAAADt/wQAAAABAAIAAADs/wQAAAABAAIAAADr/wQAAAABAAIAAADq/wQAAAABAAIAAADp/wQAAAABAAIAAADo/wQAAAABAAIAAADn/wQAAAABAAIAAADm/wQAAAABAAIAAADl/wQAAAABAAIAAADk/wQAAAABAAIAAADj/wQAAAABAAIAAADi/wQAAAABAAIAAADh/wQAAAABAAIAAADg/wQAAAABAAIAAADf/wQAAAABAAIAAADe/wQAAAABAAIAAADd/wQAAAABAAIAAADc/wQAAAABAAIAAADb/wQAAAABAAIAAADa/wQAAAABAAIAAADZ/wQAAAABAAIAAADY/wQAAAAAAAIAAAAIAAQAAAACAAIAAAAIAAMAAAACAAEAAAAIAAIAAAACAAEAAAAIAAEAAAACAAEAAAAIAAAAAAACAAEAAAAHAAQAAAABAAIAAAAHAAMAAAABAAEAAAAHAAIAAAABAAEAAAAHAAEAAAABAAEAAAAHAAAAAAABAAEAAAA=")
tile_set = ExtResource("2_r4p3r")

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(-64, -72)
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("3_5t8nr")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="Player" parent="." instance=ExtResource("5_twqex")]
position = Vector2(-24, -11)

[node name="PathCamera" type="Node2D" parent="." node_paths=PackedStringArray("follow_target", "follow_path")]
top_level = true
position = Vector2(-64, -72)
script = ExtResource("6_0dh02")
follow_mode = 4
follow_target = NodePath("../Player")
follow_path = NodePath("../Path2D")
tween_resource = SubResource("Resource_jf5q1")
draw_limits = true
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="NoneCamera" type="Node2D" parent="."]
position = Vector2(-424, -72)
script = ExtResource("6_0dh02")
tween_resource = SubResource("Resource_f67no")
draw_limits = true
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_q3lyl")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-88.00003, -96.00001)
scale = Vector2(15, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.53333616, 2.4000013)
shape = SubResource("RectangleShape2D_jf5q1")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
